# thumos-stock-screener

./: .gitignore  LICENSE  README.md  example.ipynb  example.py  example_backtest.py  setup.cfg
.github/workflows/: gen-requirements.yml  main.yml  python-publish.yml
documentation/: index.html  search.json  stock_scanner.html
documentation/stock_scanner/: Stock.html  condition.html  data_fetcher.html  data_reader.html  export.html  scanner.html  validator.html
documentation/stock_scanner/condition/: Above150And200SMA.html  Condition.html  Consolidating.html
documentation/stock_scanner/data_fetcher/: DataFetcher.html  YahooDataFetcher.html
documentation/stock_scanner/data_reader/: CSVReader.html  DataReader.html
documentation/stock_scanner/export/: SaveTickersToFile.html  SaveToInteractive.html  SaveToPNG.html
documentation/stock_scanner/scanner/: BasicScanner.html  Scanner.html
documentation/stock_scanner/validator/: BasicValidator.html  Validator.html
src/stock_scanner/: Stock.py  __init__.py  requirements.txt
src/stock_scanner/backtest/: AnalysisResult.py  AnalyzerInterface.py  BacktestInterface.py  Performance30Days.py
src/stock_scanner/condition/: Above150And200SMA.py  AboveTwoSMAs.py  Condition.py  ConditionInterface.py  Consolidating.py  __init__.py  n_day_bullrun.py  n_green_days.py
src/stock_scanner/data_fetcher/: DataFetcher.py  YahooDataFetcher.py  __init__.py
src/stock_screener/: Stock.py  __init__.py
src/stock_screener_jonca.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/stock_screener_joncav.egg-info/: PKG-INFO  SOURCES.txt
(+60 files in other folders)
