[metadata]
name = stock-scanner
version = 0.1.01
author = Jon Cavallie Mester
author_email = joncavalliemester@protonmail.com
description = A Python framework for building stock scanners/screeners.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jonmest/stock-scanner
project_urls =
    Bug Tracker =https://github.com/jonmest/stock-scanner/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
