[metadata]
name = thumos-stock-screener
version = 0.1.06
author = Jon Cavallie Mester
author_email = joncavalliemester@protonmail.com
description = A Python framework for building stock scanners/screeners.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jonmest/stock-scanner
project_urls =
    Bug Tracker =https://github.com/jonmest/stock-scanner/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    auto_mix_prep >= 0.2.0
    mplfinance >= 0.12.9b1
    pandas >= 1.4.2
    plotly >= 5.8.2
    yahoo_fin >= 0.8.9.1
    yahooquery >= 2.2.15

python_requires = >=3.6

[options.packages.find]
where = src
